[package]
name = "hype-derive"
version = "0.1.0"
authors = ["Martin Lacko <martin.lacko@vacuumlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
enumflags2 = "0.7"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
itertools = "0.10"
rand = "0.8"
thiserror = "1.0"