[package]
name = "hype-test-main"
version = "0.1.0"
authors = ["Martin Lacko <martin.lacko@vacuumlabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
hype-rs = { path = "../hype-rs", features = ["derive"] }