[package]
name = "hype-tests"
version = "0.1.0"
authors = ["Lenovo ThinkPad"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hype-rs = { path = "../hype-rs" }
hype-derive = { path = "../hype-rs/src/feature_vector/derive" }