[package]
name = "hype-derive"
version = "0.1.0"
authors = ["Martin Lacko <mrt.lacko@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Hyperdimensional computation library"
homepage = "https://github.com/Kyras/hype-rs"
repository = "https://github.com/Kyras/hype-rs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"